--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <div class="col-md-6 col-sm-6">
                     <div class="header-bottom-left">
                       <h1>Play DOTA 2 like never before</h1>
-                      <p>Easy-to-use application for posting and searching guides. Perefect tool to improve your gameplay, wthout requiring to much attention to your phone.</p>
+                      <p>Easy-to-use application for posting and searching guides. Perfect tool to improve your gameplay, without requiring too much attention to your phone.</p>
                       <a class="download-btn" href="#">Download App</a>
                     </div>
                   </div>
@@ -143,14 +143,14 @@
                       <i class="fa fa-edit"></i>
                       <div class="features-content">
                         <h4>Easy way to create your very own guide</h4>
-                        <p>There no need to write useles chinks of text, be discrete and be popular</p>
+                        <p>There is no need to write useless chunks of text, be discrete and be popular</p>
                       </div>
                     </li>
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-object-ungroup"></i>
                       <div class="features-content">
                         <h4>Friendly layout</h4>
-                        <p>Everything you need on a screen. All you need is having a phone by your side</p>
+                        <p>Everything you need is on the screen. All you need is having a phone by your side</p>
                       </div>
                     </li>
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
@@ -179,21 +179,21 @@
                       <i class="fa fa-rocket"></i>
                       <div class="features-content">
                         <h4>Like-system of guides</h4>
-                        <p>LYou can see what guides people use more often, but also you search for others as well</p>
+                        <p>You can see what guides people use more often, but also you can search for others as well</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay="0.75s">
                       <i class="fa fa-cogs"></i>
                       <div class="features-content">
                         <h4>Popularity System</h4>
-                        <p>The most popular guide for every hero will be set as default automatically, if you have not choose you faouvarite yet.</p>
+                        <p>The most popular guide for every hero will be set as default automatically, if you have not choose you favourite yet.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-heart"></i>
                       <div class="features-content">
                         <h4>Energize</h4>
-                        <p>Get you charges from good guides. Yours skill will be rewarded.</p>
+                        <p>Get you charges from good guides. Your skill will be rewarded.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
