--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
     <!-- Fonts -->
 
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+
     <!-- Open Sans for body font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- Cabin for Title -->
@@ -513,17 +520,17 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="title-area wow fadeInUp">
-              <h2 class="title">Subscribe Our <span>Newsletter</span></h2>
-              <p>Be the first to experience new feelings of comfortable gameplay!</p>
-            </div>
+          <div class="title-area wow fadeInUp">
+            <h2 class="title">Subscribe Our <span>Newsletter</span></h2>
+            <p>Be the first to experience new feelings of comfortable gameplay!</p>
           </div>
+        </div>
           <!-- Start download app content -->
           <div class="col-md-12">
             <div class="subscribe-content wow fadeInLeft">
-              <form action="" class="subcr-form">
+              <form action="//dotamateapp.us13.list-manage.com/subscribe/post?u=b4f00eea5f3877d715370ac0a&amp;id=bb43b14a87" method="post" class="subcr-form" name="mc-embedded-subscribe-form"  target="_blank" novalidate>
                 <i class="fa fa-envelope-o"></i>
-                <input type="text" name="" id="" placeholder="Type your mail address..">
+                <input type="email"  name="EMAIL" placeholder="Type your mail address..">
                 <button type="submit" class="subcr-btn">Subscribe</button>
               </form>
             </div>
@@ -532,6 +539,12 @@
       </div>
     </div>
   </section>
+
+  <!-- Begin MailChimp Signup Form -->
+
+
+
+  <!--End mc_embed_signup-->
   <!-- End download app -->
 
   <!-- Start contact -->
