--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 
     <!-- Fonts -->
 
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
+    <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">-->
 
     <!-- Open Sans for body font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -530,7 +525,7 @@
             <div class="subscribe-content wow fadeInLeft">
               <form action="//dotamateapp.us13.list-manage.com/subscribe/post?u=b4f00eea5f3877d715370ac0a&amp;id=bb43b14a87" method="post" class="subcr-form" name="mc-embedded-subscribe-form"  target="_blank" novalidate>
                 <i class="fa fa-envelope-o"></i>
-                <input type="email"  name="EMAIL" placeholder="Type your mail address..">
+                <input type="text"  name="EMAIL" placeholder="Type your mail address..">
                 <button type="submit" class="subcr-btn">Subscribe</button>
               </form>
             </div>
