--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>DotaMate</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/icon" href="assets/images/icon.png"/>
     <!-- Font Awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
@@ -554,7 +554,7 @@
         </div>
         <div class="col-md-12">
           <div class="contact-area">
-            <form action="" class="contact-form">
+            <form action="MAILTO:dotamateapp@gmail.com" class="contact-form">
               <div class="form-group">                  
                 <input type="text" class="form-control" placeholder="Your name">
               </div>
