--- a/index.html
+++ b/index.html
@@ -382,21 +382,21 @@
                     <span class="fa fa-search view-btn"></span>
                   </div>
                </a>
-              <!--</li>-->
-               <!--<li class="col-md-3 wow fadeInLeft">-->
-                 <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
-                  <!--<div class="view-btn-area">-->
-                    <!--<span class="fa fa-search view-btn"></span>-->
-                  <!--</div>-->
-               <!--</a>-->
-              <!--</li>-->
-              <!--<li class="col-md-3 wow fadeInLeft">-->
-                 <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
-                  <!--<div class="view-btn-area">-->
-                    <!--<span class="fa fa-search view-btn"></span>-->
-                  <!--</div>-->
-               <!--</a>-->
-              <!--</li>-->
+              </li>
+               <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/winter-pop.jpg"><img src="assets/images/winter.jpg" alt="app screenshot">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+              <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/feed2-popup.jpg"><img src="assets/images/feed2.jpg" alt="app screenshot">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
                <!--<li class="col-md-3 wow fadeInLeft">-->
                  <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
                   <!--<div class="view-btn-area">-->
@@ -442,15 +442,15 @@
             <div class="download-app-content">
               <!-- Start single download -->
               <!-- Start single download -->
-              <a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="#">
-                <div class="download-icon">
-                  <i class="fa fa-play"></i>
-                </div>
-                <div class="download-content">
-                  <p>Available on the</p>
-                  <span>Play Store</span>
-                </div>
-              </a>
+              <!--<a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="#">-->
+                <!--<div class="download-icon">-->
+                  <!--<i class="fa fa-play"></i>-->
+                <!--</div>-->
+                <!--<div class="download-content">-->
+                  <!--<p>Available on the</p>-->
+                  <!--<span>Play Store</span>-->
+                <!--</div>-->
+              <!--</a>-->
               <!-- Start single download -->
               <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="#">
                 <div class="download-icon">
