--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
                       <i class="fa fa-rocket"></i>
                       <div class="features-content">
                         <h4>Like-system of guides</h4>
-                        <p>LYou can see what guides people use more often, but also you search for others as well</p>
+                        <p>You can see what guides people use more often, but also you search for others as well</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay="0.75s">
                       <i class="fa fa-cogs"></i>
                       <div class="features-content">
                         <h4>Popularity System</h4>
-                        <p>The most popular guide for every hero will be set as default automatically, if you have not choose you faouvarite yet.</p>
+                        <p>The most popular guide for every hero will be set as default automatically, if you have not choose you favourite yet.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
