--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="header-bottom-left">
                       <h1>Play DOTA 2 like never before</h1>
                       <p>Easy-to-use application for posting and searching guides. Perefect tool to improve your gameplay, wthout requiring to much attention to your phone.</p>
-                      <a class="download-btn" href="#">Download App</a>
+                      <a class="download-btn" href="http://bit.ly/DotaMate">Download App</a>
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-6">
@@ -397,27 +397,20 @@
                   </div>
                </a>
               </li>
-               <!--<li class="col-md-3 wow fadeInLeft">-->
-                 <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
-                  <!--<div class="view-btn-area">-->
-                    <!--<span class="fa fa-search view-btn"></span>-->
-                  <!--</div>-->
-               <!--</a>-->
-              <!--</li>-->
-               <!--<li class="col-md-3 wow fadeInLeft">-->
-                 <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
-                  <!--<div class="view-btn-area">-->
-                    <!--<span class="fa fa-search view-btn"></span>-->
-                  <!--</div>-->
-               <!--</a>-->
-              <!--</li>-->
-               <!--<li class="col-md-3 wow fadeInLeft">-->
-                 <!--<a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">-->
-                  <!--<div class="view-btn-area">-->
-                    <!--<span class="fa fa-search view-btn"></span>-->
-                  <!--</div>-->
-               <!--</a>-->
-              <!--</li>-->
+              <li class="col-md-3 wow fadeInLeft">
+                <a class="fancybox" data-fancybox-group="gallery" href="assets/images/feed3-popup.jpg"><img src="assets/images/feed3.jpg" alt="app screenshot">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+                </a>
+              </li>
+              <li class="col-md-3 wow fadeInLeft">
+                <a class="fancybox" data-fancybox-group="gallery" href="assets/images/templar-pop.jpg"><img src="assets/images/templar.jpg" alt="app screenshot">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -434,7 +427,7 @@
           <div class="col-md-12">
             <div class="title-area wow fadeInUp">
               <h2 class="title">Download <span>App</span></h2>
-              <p>Available soon on both platforms</p>
+              <!--<p>Available soon on both platforms</p>-->
             </div>
           </div>
           <!-- Start download app content -->
@@ -452,7 +445,7 @@
                 <!--</div>-->
               <!--</a>-->
               <!-- Start single download -->
-              <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="#">
+              <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="http://bit.ly/DotaMate">
                 <div class="download-icon">
                   <i class="fa fa-apple"></i>
                 </div>
