--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <div class="col-md-6 col-sm-6">
                     <div class="header-bottom-left">
                       <h1>Play DOTA 2 like never before</h1>
-                      <p>Easy-to-use application for posting and searching guides. Perefect tool to improve your gameplay, wthout requiring to much attention to your phone.</p>
+                      <p>Easy to use application for creating and searching trending builds. Prefect tool to improve your gameplay, without requiring to much attention to your phone.</p>
                       <a class="download-btn" href="http://bit.ly/DotaMate">Download App</a>
                     </div>
                   </div>
@@ -145,7 +145,7 @@
                       <i class="fa fa-edit"></i>
                       <div class="features-content">
                         <h4>Easy way to create your very own guide</h4>
-                        <p>There no need to write useles chinks of text, be discrete and be popular</p>
+                        <p>There is no need to write useless chunks of text, be discrete and be popular</p>
                       </div>
                     </li>
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
@@ -188,7 +188,7 @@
                       <i class="fa fa-cogs"></i>
                       <div class="features-content">
                         <h4>Popularity System</h4>
-                        <p>The most popular guide for every hero will be set as default automatically, if you have not choose you favourite yet.</p>
+                        <p>The most popular guide for every hero will be set as default automatically, if you have not, choose your favourite yet.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
