Roshan Image added

--- a/index.html
+++ b/index.html
@@ -370,28 +370,7 @@
                </a>
               </li>
                <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/feed-pop.jpg"><img src="assets/images/feed.jpg" alt="app screenshot">
-                    <div class="view-btn-area">
-                      <span class="fa fa-search view-btn"></span>
-                    </div>
-                 </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/create-pop.jpg"><img src="assets/images/create.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
                  <a class="fancybox" data-fancybox-group="gallery" href="assets/images/winter-pop.jpg"><img src="assets/images/winter.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-              <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/feed2-popup.jpg"><img src="assets/images/feed2.jpg" alt="app screenshot">
                   <div class="view-btn-area">
                     <span class="fa fa-search view-btn"></span>
                   </div>
@@ -406,6 +385,13 @@
               </li>
               <li class="col-md-3 wow fadeInLeft">
                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/templar-pop.jpg"><img src="assets/images/templar.jpg" alt="app screenshot">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+                </a>
+              </li>
+              <li class="col-md-3 wow fadeInLeft">
+                <a class="fancybox" data-fancybox-group="gallery" href="assets/images/rosh-pop.jpg"><img src="assets/images/rosh.jpg" alt="app screenshot">
                   <div class="view-btn-area">
                     <span class="fa fa-search view-btn"></span>
                   </div>
