--- a/index.html
+++ b/index.html
@@ -420,17 +420,17 @@
           <div class="col-md-12">
             <div class="download-app-content">
               <!-- Start single download -->
-              <!-- Start single download -->
-              <!--<a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="#">-->
-                <!--<div class="download-icon">-->
-                  <!--<i class="fa fa-play"></i>-->
-                <!--</div>-->
-                <!--<div class="download-content">-->
-                  <!--<p>Available on the</p>-->
-                  <!--<span>Play Store</span>-->
-                <!--</div>-->
-              <!--</a>-->
-              <!-- Start single download -->
+               Start single download
+              <a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="http://dotamateapp.com/googlea7588f4cc1bae941.html">
+                <div class="download-icon">
+                  <i class="fa fa-play"></i>
+                </div>
+                <div class="download-content">
+                  <p>Available on the</p>
+                  <span>Play Store</span>
+                </div>
+              </a>
+               Start single download
               <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="http://bit.ly/DotaMate">
                 <div class="download-icon">
                   <i class="fa fa-apple"></i>
