--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="google-site-verification" content="6MPvIGIGOHYjeciPdrUKl3Tz-u-3hxvt2rl2pZpH7sI" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>DotaMate</title>
     <!-- Favicon -->
@@ -420,17 +422,15 @@
           <div class="col-md-12">
             <div class="download-app-content">
               <!-- Start single download -->
-               Start single download
-              <a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="http://dotamateapp.com/googlea7588f4cc1bae941.html">
-                <div class="download-icon">
-                  <i class="fa fa-play"></i>
-                </div>
-                <div class="download-content">
-                  <p>Available on the</p>
-                  <span>Play Store</span>
-                </div>
-              </a>
-               Start single download
+              <!--<a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="http://dotamateapp.com/googlea7588f4cc1bae941.html">-->
+                <!--<div class="download-icon">-->
+                  <!--<i class="fa fa-play"></i>-->
+                <!--</div>-->
+                <!--<div class="download-content">-->
+                  <!--<p>Available on the</p>-->
+                  <!--<span>Play Store</span>-->
+                <!--</div>-->
+              <!--</a>-->
               <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="http://bit.ly/DotaMate">
                 <div class="download-icon">
                   <i class="fa fa-apple"></i>
